deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swiggy
  labels:
    app: swiggy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: swiggy
  template:
    metadata:
      labels:
        app: swiggy
    spec:
      containers:
        - name: swiggy
          image: devsaini1441/swiggy:5df55b770e3a649cfb9a138372e136914c122c05
          imagePullPolicy: Always
          ports:
            - containerPort: 80
