service.yaml
apiVersion: v1
kind: Service
metadata:
  name: swiggy-service
spec:
  type: ClusterIP
  selector:
    app: swiggy
  ports:
    - port: 80
      targetPort: 80
