ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swiggy-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: swiggy-service
                port:
                  number: 80
